# Epsilon-Hollow

./: .dockerignore  .gitattributes  .gitconfig.local  .gitignore  AUDIT_REPORT.md  AUDIT_REPORT_SECURITY_HYGIENE_2026-06-01.md  All_fixes_done.md  BENCHMARKS.md  BRUTAL_AUDIT.md  CERTIFICATION.md  CODE_OF_CONDUCT.md  COMPLEX_TASKS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUTURE_PLAN.md  LICENSE  LOOPHOLE_CLOSURE.md  QUALITY_AUDIT.md  README.md  README_OLD.md  SECURITY.md  SPEC_VS_REALITY.md  TASKS.md  TIMELINE.md  deny.toml  docker-compose.yml  fix_checkboxes.py  fix_compiler_errors.sh  fix_warnings.sh  humans.txt  patch.diff  patch2.diff  patch3.diff  plan.md  robots.txt  run.sh  rust-toolchain.toml  test_matmul  ubuntu_one_click.sh  (+1 more)
apps/laamba-governor/src-tauri/: Cargo.toml  tauri.conf.json
apps/laamba-governor/src-tauri/capabilities/: default.json
apps/laamba-governor/src-tauri/src/: lib.rs  main.rs  native.rs  state.rs
apps/laamba-governor/src-tauri/src/engine/: manager.rs  manifest.rs  mod.rs  parser.rs  registry.rs
apps/laamba-governor/src-tauri/src/ipc/: commands.rs
apps/laamba-governor/src-tauri/src/pipeline/: executor.rs  graph.rs  mod.rs  types.rs
apps/laamba-governor/src-tauri/src/sample/: mod.rs
apps/laamba-governor/src-tauri/src/timeline/: history.rs
future/apeiron-runtime/APEIRON/runtime/aether-cli/: Cargo.toml
future/apeiron-runtime/crates/runtime/aether-cli/: Cargo.toml
kernel/aether/Aether-Lang/: Cargo.toml  Dockerfile  mkdocs.yml  pyproject.toml
kernel/aether/Aether-Lang/.github/workflows/: ci.yml
kernel/aether/Aether-Lang/.jules/: bolt.md
kernel/aether/Aether-Lang/agents/: deferred_work_prd.md
kernel/aether/Aether-Lang/crates/aegis-cli/: Cargo.toml
kernel/aether/Aether-Lang/docs/: BENCHMARKS.md  HARDWARE_SPEC.md  ML_AETHER.md  OS_DEVELOPMENT.md  index.md
kernel/aether/Aether-Lang/docs/benchmarks/: index.md
kernel/aether/Aether-Lang/examples/: benchmark_compare.py  drivers.ag  grand_benchmark.aegis  hello_manifold.aegis  llm_benchmark.py  ml_test.ag  seal_demo.aegis
kernel/aether/aether-link/: Cargo.toml  README.md
kernel/aether/aether-link/benches/: aether_bench.rs  io_cycle.rs
kernel/aether/aether-link/examples/: basic_usage.rs  streaming_io.rs  world_model_demo.rs
kernel/aether/aether-link/src/: fast_math.rs  lib.rs
kernel/aether/aether-nexus/: Cargo.toml  epsilon-ide-telemetry.json
kernel/aether/aether-nexus/src/: main.rs
kernel/aether/aether-verified/: Cargo.toml
kernel/aether/aether-verified/lean/: AetherVerified.lean  EpsilonTheorems.lean  README.md  TestNat.lean  lake-manifest.json  lakefile.lean  test_nat_chain.lean  test_nat_ineq.lean  test_sub_le.lean
kernel/aether/aether-verified/src/: aether_agcr.rs  aether_betti.rs  aether_chebyshev.rs  aether_gmc.rs  aether_governor.rs  aether_hcs.rs  aether_pruning.rs  aether_scm.rs  aether_tss.rs  aether_world.rs  lib.rs
kernel/aether/aether-verified/tests/: proptest_tss.rs
kernel/runtime/apeiron-runtime-master/: Cargo.toml  SUPER_PRD.md  build_errors.txt  temp_main.rs
kernel/runtime/apeiron-runtime-master/APEIRON/: .dockerignore  docker-compose.yml
kernel/runtime/apeiron-runtime-master/agents/: bugs.md
kernel/runtime/apeiron-runtime-master/frontend/: next-env.d.ts
kernel/seal-os/: ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  TESTING.md  build-iso.ps1  build-iso.sh  build-vbox.ps1  build.rs  docker-compose.yml  linker.ld  run-qemu.ps1  run-qemu.sh  run.ps1  run.sh  smoke-vbox.ps1  x86_64-seal-os.json
kernel/seal-os/.cargo/: config.toml
kernel/seal-os/boot/grub/: grub.cfg
kernel/seal-os/src/: lib.rs  main.rs  ml_engine.rs
kernel/seal-os/src/apps/: aether_app_host.rs  breakout.rs  calculator.rs  clipboard.rs  file_manager.rs  game_engine.rs  gpu_benchmark.rs  help.rs  installer.rs  laamba_governor.rs  media_player.rs  mod.rs  seal_ide.rs  settings.rs  shell.rs  snake.rs  tensor_viewer.rs  terminal.rs  theorem_viewer.rs  warp_racer.rs
kernel/seal-os/src/async_rt/: channel.rs  io.rs  mod.rs  task.rs  timer.rs
kernel/seal-os/src/boot/: ap_trampoline.rs  boot.S  boot_info.rs  mod.rs  multiboot2.rs  uefi_entry.rs
kernel/seal-os/src/cpu/: mod.rs  smp.rs
kernel/seal-os/src/drivers/: apic.rs  bluetooth.rs  entropy.rs  gpu.rs  interrupts.rs  ioctl.rs  kmsg.rs  mod.rs  nvme.rs  pci.rs  rtc.rs  serial.rs  watchdog.rs  wifi.rs
kernel/seal-os/src/fs/: block_store.rs  buffer_cache.rs  devtmpfs.rs  dir_hash.rs  encoder.rs  ext2.rs  fat.rs  inode_slab.rs  journal.rs  manifold_fs.rs  mod.rs  path_cache.rs  pipe.rs  prefetch.rs  procfs.rs  sysfs.rs  topcrypt.rs  vfs.rs  voronoi_cap.rs
kernel/seal-os/src/graphics/: console.rs  font.rs  framebuffer.rs  htek.rs  login.rs  mod.rs  splash.rs  topo_render.rs  wallpaper.rs
kernel/seal-os/src/lang/: mod.rs  stdlib.rs
kernel/seal-os/src/memory/: gdt.rs  heap.rs  mmap.rs  mod.rs  pgtable_asm.rs  phys.rs  slab.rs  swap.rs  topo_ram.rs  virt.rs
kernel/seal-os/src/ml_engine/: tensor_viz.rs  topo_asm.rs
kernel/seal-os/src/net/: arp.rs  dhcp.rs  dns.rs  firewall.rs  icmp.rs  ipv4.rs  ipv6.rs  mod.rs  tcp.rs  topological.rs  udp.rs
kernel/seal-os/src/pkg/: carrier.rs  format.rs  manifest.rs  mod.rs  registry.rs  resolver.rs
kernel/seal-os/src/process/: context_switch.rs  elf.rs  hollow_asm.rs  mod.rs  scheduler.rs  signal.rs  task.rs  userspace.rs
kernel/seal-os/src/security/: aslr.rs  audit.rs  audit_runtime.rs  group.rs  kpti.rs  mac.rs  manifold_acl.rs  mod.rs  passwd.rs  retpoline.rs  seccomp.rs  shadow.rs  smap_smep.rs  topcrypt_guard.rs
kernel/seal-os/src/sync/: mod.rs  seq_lock.rs  tests.rs  ticket_lock.rs  tlb.rs
kernel/seal-os/src/syscall/: ioctl.rs  mod.rs  pipe.rs  signal.rs  table.rs  time.rs
kernel/seal-os/src/testing/: harness.rs  mock.rs  mod.rs  runner.rs
kernel/seal-os/src/wm/: app_launcher.rs  app_state.rs  compositor.rs  cursor.rs  desktop.rs  event.rs  mod.rs  power_menu.rs  start_menu.rs  taskbar.rs  themes.rs  welcome.rs  window.rs
kernel/seal-os/tests/: prop_dirhash.rs  qemu_runner.rs
userspace/gpu_benchmark/: Cargo.toml
userspace/gpu_benchmark/src/: main.rs
(+640 files in other folders)
