[workspace]

[package]
name = "seal-os"
version = "0.4.7"
edition = "2021"
authors = ["Teerth Sharma"]
license = "MIT"
description = "Seal OS - The Geometrical Operating System. OS state is topology on S^2."

[package.metadata.seal-os]
release-version = "0.4.7.5"

[features]
default = []
test-mode = []

[dependencies]
aether-core = { path = "../epsilon/epsilon/crates/aether-core", default-features = false, features = ["no_std"] }
aether-lang = { path = "../aether/Aether-Lang/crates/aether-lang", default-features = false, features = ["no_std"] }
aether_verified = { path = "../aether/aether-verified", default-features = false }
spin = "0.9"
volatile = "0.4"
x86_64 = { version = "0.15.2", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
libm = { version = "0.2", default-features = false }
uefi = { version = "0.32", features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
x25519-dalek = { version = "2.0", default-features = false, features = ["alloc"] }

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[dev-dependencies]
proptest = { version = "1.5.0", default-features = false, features = ["alloc"] }
