[package]
name = "aether_verified"
version = "0.1.0"
edition = "2021"
description = "Lean 4 → C → Rust verified kernels for Epsilon-Hollow"
license-file = "../../../LICENSE"
authors = ["Teerth Sharma"]

[dependencies]
libm = "0.2"

[dev-dependencies]
# Pin to 1.5 to avoid pulling rand 0.9 / getrandom 0.4 which require
# edition2024 features beyond the workspace's Rust 1.85 toolchain.
proptest = "=1.5.0"

[lib]
name = "aether_verified"
path = "src/lib.rs"
