[package]
name = "aether-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
warp = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1.0"
hyper = { version = "0.14", features = ["full"] }
rustyline = { workspace = true }

aether-core = { path = "../aether-core" }
aether-link = { path = "../../network" }
sanctuary-dsp = { path = "../../dsp" }
