[package]
name = "aegis-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AEGIS Core: TitanClock lock-free sharded memory allocator"

[dependencies]
libm = { workspace = true }
serde = { workspace = true, optional = true }
nalgebra = { workspace = true, optional = true }

[features]
default = ["std"]
std = []
alloc = []
