[package]
name = "aether-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aether-Lang Cross-Platform CLI"

[dependencies]
repl-core = { path = "../repl-core" }
clap = { workspace = true }

[[bin]]
name = "aether"
path = "src/main.rs"
