[package]
name = "repl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared REPL, runner, and syntax checker for Aether-Lang CLIs"

[dependencies]
aether-lang = { path = "../aether-lang" }
clap = { workspace = true }
rustyline = { workspace = true }
