[package]
name = "epsilon-os"
version = "0.1.0"
edition = "2021"
authors = ["Teerth Sharma"]
license-file = "../../../../../LICENSE"
description = "Epsilon-Hollow Topological OS — episodic memory with O(1) Voronoi retrieval, SCM dynamics, and LLM bridge"

[dependencies]
aether-core = { path = "../aether-core", features = ["std"] }
aether_verified = { path = "../../../../aether/aether-verified" }
libm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "epsilon-os"
path = "src/main.rs"
