[package]
name = "epsilon-os"
version = "0.1.0"
edition = "2021"
authors = ["Teerth Sharma"]
license = "MIT"
description = "Epsilon-Hollow Topological OS — episodic memory with O(1) Voronoi retrieval, SCM dynamics, and LLM bridge"

[dependencies]
aether-core = { path = "../aether-core", version = "0.1.0", features = ["std"] }
aether_verified = { path = "../../../../aether/aether-verified", version = "0.1.0" }
libm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "epsilon-os"
path = "src/main.rs"
